Revision history for Perl extension Language::Befunge.

0.38 Fri May  3 14:47:09 CEST 2002
        - Removed a (silly) debug message.
        - Fool-proof for ascii input.
        - Numeric input works with LB::IP::input() (just as ascii input).
        - Numeric input asks for input until it gets a valid input.

0.37 Wed Apr 24 08:54:00 CEST 2002
        - New mechanism of libraries loading: loading instances of
          extension instead of a plain module.
        - doc/library.pod modified to reflect this.

0.36 Mon Apr 22 20:44:10 CEST 2002
        - jqbf98 now understands the -v flag (verbose)
        - New examples tpr00.bf, palin.bf
        - IP.pm now has two methods spush_vec and spop_vec. Befunge.pm
          modified to take advantage of those methods.
        - IP.pm now has a method spush_args to push (and convert)
          arguments on the stack.
        - IP.pm comes with a storage facility to allow library to
          fetch and store whatever data they want. This is highly
          experimental and the interface may change in future
          releases.

0.35 Tue Apr 16 17:20:29 CEST 2002
        - LaheySpace::labels_lookup() now also returns the velocity
          that found the label.
        - Minor pod update.

0.34 Tue Apr 16 15:00:27 CEST 2002
        - Minor bug fix in LaheySpace.pm. I discovered it by chance,
          since it's a tiny little bug that did not seem to break
          anything.
        - LaheySpace now has a labels_lookup() method, that allow to
          search for labels inside comments. This will be used in
          Inline::Befunge and maybe some extensions will use this
          non-standard mechanism.
        - Minor update to doc/library.pod

0.33 Mon Apr 15 17:21:23 CEST 2002
        - Fancy stuff added in order to support Inline::Befunge (does
          not change the default behavior)
        - One more debug message

0.32 Mon Apr 15 12:01:53 CEST 2002
        - POD fixing in doc/library.pod
